fixed menu z-index issue

--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@ header form[role="search"] {
 
   .bottomnav ul li ul {
     position: absolute;
-    z-index: 99;
+    z-index: 9999;
     width: 200px;
     background: white;
     list-style: none;
